asset/sass/_screen.scss
/* ... */
#collection-items h2 {
    width: 100%;
}

.resource-list .resource-link {
    font-weight: bold;
    flex-wrap: wrap;

    img {
        height: auto !important;
    }
}

.browse .resource h4 {
    font-size: $base-font-size;
    line-height: $base-line-height;
    margin-bottom: 0;
}

.browse .item-img a {
    display: block;
}

.browse .resource img {
    max-width: 100%;
}

.browse .creator + .date {
    margin-left: -4px;

    &:before {
        content: ", ";
    }
}

.search-filters {
    text-align: center;
    margin: 0 0 $spacing-l;

    .filter {
        display: inline-block;
        border: 1px solid $gray;
        padding: $spacing-s - 1px;
        font-size: 1.25 * $base-font-size;
        margin: 0 .5em;
    }

    .filter-label:after {
        content: ": ";
    }
}

/* @end */

/* @group ----- Show ----- */

#itemfiles {
    margin-bottom: $spacing-l;
    height: 0;
    padding-bottom: 50vh;

    li {
        display: none;
    }
}

.media-render img {
    vertical-align: top;
}

#content #itemfiles a {
    background-color: transparent;
}

.media.show .media-render.video {
    margin-bottom: $spacing-l;
    text-align: center;
    background-color: #000;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    padding-bottom: 2.25 * $spacing-l;

    video {
        width: auto;
        max-height: 50vh;
        max-width: 100%;
    }
}

@font-face {
    font-family:lg;
    src:url(../fonts/lg.woff2?io9a6k) format("woff2"),
    url(../fonts/lg.ttf?io9a6k) format("truetype"),
    url(../fonts/lg.woff?io9a6k) format("woff"),
    url(../fonts/lg.svg?io9a6k#lg) format("svg");
    font-weight:400;
    font-style:normal;
    font-display:block
}

.lg-outer.lg-first-slide-loading .lg-actual-size, 
.lg-outer.lg-first-slide-loading .lg-zoom-in, 
.lg-outer.lg-first-slide-loading .lg-zoom-out, 
.lg-outer[data-lg-slide-type="iframe"] .lg-actual-size, 
.lg-outer[data-lg-slide-type="iframe"] .lg-zoom-in, 
.lg-outer[data-lg-slide-type="iframe"] .lg-zoom-out, 
.lg-outer[data-lg-slide-type="video"] .lg-actual-size, 
.lg-outer[data-lg-slide-type="video"] .lg-zoom-in, 
.lg-outer[data-lg-slide-type="video"] .lg-zoom-out {
    display: none;
}

.lg-counter {
    min-width: 50px;
    padding-left: 0;
    margin-left: 20px;
    text-align: center;
}

.lg-icon.hidden {
    display: none;
}

.lg-icon.o-icon-undo {
    font-size: 16px;
}

.media-render a.lg-icon {
    font-family: lg !important;
    speak: never;
    font-size: 1.5 * $base-font-size;
    font-style: normal;
    font-weight: 400;
    font-variant: normal;
    text-transform: none;
    line-height: 1;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    height: 2 * $spacing-l;
    width: 2 * $spacing-l;
    display: inline-block;
    color: #fff;
    opacity: .5;
    margin-top: $spacing-m;
    text-align: center;
}

.media-render a.lg-icon:hover {
    opacity: 1;
}

.lg-download:after {
    content: '\e0f2';
}

.lg-toolbar {
    width: 100%;
    text-align: right;
}

.expand:after,
.collapse:after {
    font-family: "Font Awesome 5 Free";
    font-weight: 900;
}

.expand:after {
    content: "\f0da";
}

.collapse:after {
    content: "\f0d7";
}

.collapsible {
    display: none;
}

.collapse + .collapsible {
    display: block;
    width: 100%;

    dl {
        margin-top: $spacing-m;
    }

    .property {
        margin-bottom: $spacing-m;
    }
}

.property,
.media-list  {
    display: flex;
    margin-bottom: $spacing-l;
    flex-wrap: wrap;
    justify-content: flex-end;
    clear: both;
    width: 100%;
}

.resource.show dt {
    width: 25%;
    font-weight: bold;
    color: #000;
    margin: 0;
    text-align: right;
    padding: 0 0 0 $spacing-l;
    font-size: 1.25 * $base-font-size;
}

.resource.show dl dl dt {
    font-size: $base-font-size !important;
    line-height: $base-line-height;
}

.property .field-term {
    display: block;
    font-size: $base-font-size;
}

.resource-metadata {
    width: 100%;
}

.resource.show dl dl {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    border-left: 1px solid $gray;
    margin: $spacing-l 0;
}

.resource.show dt ~ dd,
.media-list dt ~ .resource-link {
    width: 75%;
    padding: 0 $spacing-l;
    margin-left: 0;
}

.resource.show .property dl dt,
.resource.show .property dl dd {
    margin-bottom: $spacing-m;

    &:last-of-type {
        margin-bottom: 0;
    }
}

.resource.show .property .property {
    margin-bottom: 0;
}

.resource-metadata .value:not(:last-child),
.media-list dt ~ .resource-link:not(:last-child),
#linked-resources .linked-resource {
    padding-bottom: $spacing-s;
    margin-bottom: $spacing-s;
    border-bottom: 1px solid $gray;
}

.resource-metadata dt ~ .value:last-child,
.media-list dt ~ .resource-link:last-child {
    border-bottom-color: transparent;
}

.property .value:not(:last-child) {
    margin-bottom: $spacing-m;
}

.property .value > *:first-child {
    margin-top: 0;
}

.property .value img {
    height: 1.5 * $base-line-height;
    display: inline-block;
    vertical-align: middle;
}

.property .value .language {
    display: inline-block;
    padding: 0 $spacing-s;
    border: 1px solid $gray;
    margin-right: $spacing-s;
    align-self: flex-start;
}

.property .value table {
    margin: 0;
    width: 100%;
}

.property .value.resource .resource-link {
    float: left;
    max-width: 80%;
}

.property .value.resource .expand,
.property .value.resource .collapse {
    line-height: 1.5 * $base-line-height;
}

.property .value:not(:last-child) .resource-link {
    margin-bottom: $spacing-m;
}

.property .value-content:not(:only-child) {
    margin-right: $spacing-s;
}

.resource.show .resource-metadata .resource-link {
    display: flex;
    align-items: center;
}

.resource-metadata .resource-link img,
.results .resource-link img {
    margin-right: $spacing-s;
}
/* ... */

